# superpixels-segmentation

./: .gitignore  README.md  requirements.txt
cnn/: dataset-analysis.py  dataset.py  loss.py  network.py  test.py  train.py  utils.py  validation.py
cnn/data/: README.md
cnn/modules/: dataset.py  utils.py
cnn/results/: README.md  hyperparameter-tuning.py  loss-plot.py
cnn/testBSD/: testBSD.py
data/: README.md  txt.txt
notebooks/: activation_fct.ipynb  hyperparameter-tuning.py  loss-plot.py
other/: activation_fct.ipynb  dataset-analysis.py
presentation/: beamercolorthemeYana.sty  main.tex
report/: .gitignore  biblio.aux  biblio.bib  biblio.tex  main.aux  main.bbl  main.blg  main.out  main.tex  main.toc  preambule.sty  sources.bib
report/src/: activation-fn.py
results/: README.md  README.txt  experiences.txt  run-results.md  txt.txt
results/images/: result.json
results/loss-train/: run0_21.npy  run0_22.npy  run0_24.npy  run0_27.npy  run0_34.npy  run0_37.npy  run0_9.npy  run10_0.npy  run10_10.npy  run10_14.npy  (+128 more)
segm/: README.md  eikonal.py  groundtruth.py  metrics.py  metricsold.py  slic.py  superpixels.py  watershed.py
segm/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
segm/src/src/: fastmarching.cpp  fastmarching.h  heap.cpp  heap.h  wrapper.cpp
src/: .gitignore  dataset.py  network.py  test.py  train.py  unet_network.py  unet_test.py  unet_train.py  unet_validation.py  utils.py  validation.py
src-true/: test.py  train.py  validation.py
zz-old/: dataset.py  loss.py  network.py  unet_network.py  unet_validation.py
(+1178 files in other folders)
